--- a/src/forms/Login/LoginForm.css
+++ b/src/forms/Login/LoginForm.css
@@ -1,84 +1,99 @@
+.login-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 4em;
+  margin: var(--header-height) 0;
+}
 
-.login-text-content{
+.login-text-content {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
-  line-height: 1em;
-  margin-top: 7em;
+  /* line-height: 1em; */
+  /* margin-top: 7em; */
 }
 
-.form-container {
-    width: 60vw;
-    height: fit-content;
-    background: #FFFFFF;
-    box-shadow: 0px 187px 75px rgba(0, 0, 0, 0.01), 0px 105px 63px rgba(0, 0, 0, 0.05), 0px 47px 47px rgba(0, 0, 0, 0.09), 0px 12px 26px rgba(0, 0, 0, 0.1), 0px 0px 0px rgba(0, 0, 0, 0.1);
-    border-radius: 26px;
-    max-width: 450px;
+.login-form-container {
+  width: 60vw;
+  height: fit-content;
+  background: #FFFFFF;
+  box-shadow: 0px 187px 75px rgba(0, 0, 0, 0.01), 0px 105px 63px rgba(0, 0, 0, 0.05), 0px 47px 47px rgba(0, 0, 0, 0.09), 0px 12px 26px rgba(0, 0, 0, 0.1), 0px 0px 0px rgba(0, 0, 0, 0.1);
+  border-radius: 26px;
+  max-width: 450px;
+}
+
+.login-form {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  padding: 20px;
+  overflow: hidden;
+}
+
+.login-form-navigate-back {
+  margin-bottom: 5px;
+  display: flex;
+  flex-direction: column;
+  gap: 1em;
+  color: red;
+  align-items: center;
+}
+
+.input-container {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+
+
+.input-field {
+  width: auto;
+  height: 40px;
+  padding: 0 0 0 16px;
+  border-radius: 9px;
+  outline: none;
+  background-color: #F2F2F2;
+  border: 1px solid #e5e5e500;
+  transition: all 0.3s cubic-bezier(0.15, 0.83, 0.66, 1);
+}
+
+.input-field:focus {
+  border: 1px solid transparent;
+  box-shadow: 0px 0px 0px 2px #242424;
+  background-color: transparent;
+}
+
+.error-message {
+  color: red;
+  font-weight: 800;
+}
+
+
+/* Mobile breakpoints */
+
+@media (max-width: 820px) {
+  .loading-container {
+    width: 65vw!important;
   }
-  
-  .form {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-    padding: 20px;
-    overflow: hidden;
+}
+
+@media (max-width: 768px) {
+
+  .login-form-container {
+    width: 80vw;
+    margin-left: 0;
   }
-  
-  .form-navigate-back{
-    margin-bottom: 5px;
-    display: flex;
-    flex-direction: column;
-    gap:1em;
-    color: red;
-    align-items: center;
+
+  .login-form-navigate-back {
+    margin-top: Calc(var(--header-height) + 10px);
   }
- 
-  .input-container {
+
+  .login-text-content {
     width: 100%;
-    display: flex;
-    flex-direction: column;
-    gap: 5px;
+    overflow-x: hidden;
   }
-  
-
-  .input-field {
-    width: auto;
-    height: 40px;
-    padding: 0 0 0 16px;
-    border-radius: 9px;
-    outline: none;
-    background-color: #F2F2F2;
-    border: 1px solid #e5e5e500;
-    transition: all 0.3s cubic-bezier(0.15, 0.83, 0.66, 1);
-  }
-  
-  .input-field:focus {
-    border: 1px solid transparent;
-    box-shadow: 0px 0px 0px 2px #242424;
-    background-color: transparent;
-  }
-  
-  .error-message{
-    color: red;
-    font-weight: 800;
-  }
-
-  
-  /* Mobile breakpoints */
-
-  @media (max-width: 768px) {
-    
-    .form-container {
-        width: 80vw;
-        margin-left: 0;
-      }
-      .form-navigate-back{
-        margin-top: Calc(var(--header-height) + 10px);
-      }
-      .login-text-content{
-        width: 90vw;
-      }
-  }
- 
-  
+}
