--- a/src/layout/Layout.css
+++ b/src/layout/Layout.css
@@ -31,6 +31,11 @@
         margin-left: 0;
       }
   }
+  @media (max-width: 820px) {
+    .layout-content-container {
+      margin-left: var(--sidebar-width);
+      }
+  }
   
   
 
