--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -4,5 +4,20 @@
     justify-content: center;
     align-items: flex-start;
     line-height: 1em;
-    margin: 6em 0;
+    margin: var(--header-height) 0;
+    animation: hometext 1s linear forwards; 
+  }
+
+  @keyframes hometext { 
+    0% { 
+        margin-left: -200px; 
+    } 
+
+    30% { 
+      margin-left: 50px; 
+    } 
+
+    60% { 
+      margin-left: 0px;  
+    } 
   }
