--- a/src/layout/Layout.css
+++ b/src/layout/Layout.css
@@ -25,17 +25,33 @@
 
 /* Mobile breakpoints */
 
-  @media (max-width: 768px) {
+
+  @media only screen 
+  and (min-device-width: 320px) 
+  and (max-device-width: 480px)
+  and (-webkit-min-device-pixel-ratio: 2){
     .layout-content-container {
-        width: 100vw;
-        margin-left: 0;
-      }
-  }
-  @media (max-width: 820px) {
+      width: 100vw;
+      margin-left: 0;
+    }
+}
+
+
+  @media only screen 
+  and (min-device-width: 768px) 
+  and (max-device-width: 1024px) 
+  and (orientation: portrait) 
+  and (-webkit-min-device-pixel-ratio: 2) {
     .layout-content-container {
       margin-left: var(--sidebar-width);
       }
   }
-  
-  
-
+  /* @media only screen 
+  and (min-device-width: 768px) 
+  and (max-device-width: 1180px) 
+  and (orientation: landscape) 
+  and (-webkit-min-device-pixel-ratio: 1) {
+    .layout-content-container {
+      margin-left: 20px;
+      }
+  } */
